# riemannhypothesis.info

./: .gitignore  .gitmodules  config.yaml
content/_posts/: 2013-09-29-in-the-beginning-there-was-eulers-formula.markdown  2013-10-06-euler-product-revisited.markdown  2013-10-08-does-the-euler-product-converge.markdown  2013-10-31-perfect-symmetry.markdown  2013-11-24-are-primes-independent.markdown  2013-12-01-more-symmetry-and-another-product.markdown  2014-01-12-counting-primes-functionally.markdown  2014-02-23-infinity-is-worth-no-more-than-112.markdown  2014-04-06-from-zeta-to-j-and-back-and-yet-again-back.markdown  2014-04-13-integral-madness.markdown  2014-10-12-tossing-the-prime-coin.markdown  2014-11-02-how-not-to-earn-a-million-dollars.markdown  2014-11-23-applying-the-explicit-formula.markdown  2014-12-27-if-one-at-a-time-is-too-difficult-try-all-at-once.markdown  2015-09-23-prime-generating-sequences.markdown  2015-10-02-a-toy-keyless-encryption-protocol.markdown  2016-04-10-visualising-the-riemann-hypothesis.markdown  2016-08-05-primes-from-a-different-world.markdown  2016-10-20-numbers-of-the-world.markdown  2017-05-31-the-prime-bet.markdown
content/about/: index.markdown  index.md
content/about-me/: index.markdown  index.md
content/books-on-mathematics-in-general/: index.md
experiments/: prime_birthdays.py
experiments/zeta_animation/: Zeta animation 2.py  Zeta animation 3.py  Zeta animation.py  Zeta plot.py  pyproject.toml
experiments/zeta_animation/zeta_animation/: __init__.py  __main__.py
static/: plot_critical_line.sage
(+60 files in other folders)
