[tool.poetry]
name = "zeta-animation"
version = "0.1.0"
description = ""
authors = ["Markus Schepke <markus.schepke@wolt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
mpmath = "^1.3.0"
jupyter-black = "^0.4.0"
jupytext = "^1.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
