[tool.poetry]
name = "zeta-animation"
version = "0.1.0"
description = ""
authors = ["Markus Shepherd <markus@recommend.games>"]

[tool.poetry.dependencies]
python = "3.12.*"

matplotlib = "*"
mpmath = "*"
numpy = "*"
seaborn = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
jupyter-black = "*"
jupyterlab = "*"
jupytext = "*"
mypy = "*"
ruff = "*"
types-tqdm = "*"

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = "mpmath.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
